Remove old options